# unscrewed

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: testing.yml
src/unscrewed/: __init__.py  fetcher.py  update_config.py
tests/: test_fetcher.py  test_local_cache.py  test_update_config.py  testreg_registry.yaml
unscrewed/: update_config.py
unscrewed/tests/: test_local_cache.py
